Fixed center alignment issue

--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,3 @@
-* {
-	margin: 0px;
-	overflow: hidden;
-}
-
 a {
 	text-decoration: none !important;
 }
@@ -17,15 +12,14 @@ a {
 }
 
 .cool-link {
-	background: black;
 	color: white;
 	opacity: 0.9;
-	display: inline-flex;
+	display: inline-block;
 	width: 320px;
 	max-width: 100%;
 	height: 240px;
 	border-radius: 10px;
-	padding: 20px;
+	padding: 10px;
 	margin: 10px;
 	font-family: "Raleway", sans-serif !important;
 	font-size: 16px;
